# WiFi-image-transmission-environment-monitoring-car

h723car +freertos/: .mxproject  h723car.ioc
h723car +freertos/Core/Inc/: stm32h7xx_it.h  tim.h
h723car +freertos/Core/Src/: dcmi.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
h723car +freertos/MDK-ARM/: JLinkLog.txt  h723car.uvguix.shin  h723car.uvoptx  h723car.uvprojx  startup_stm32h723xx.lst
h723car +freertos/MDK-ARM/RTE/_h723car/: RTE_Components.h
h723car +freertos/MDK-ARM/h723car/: aht20.crf  aht20.d  bsp_system.crf  bsp_system.d  camera_run.crf  camera_run.d  cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  dcmi.crf  dcmi.d  dma.crf  dma.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  gpio.crf  gpio.d  h723car.axf  h723car.build_log.htm  h723car.hex  h723car.htm  h723car.lnp  h723car.map  h723car.sct  h723car_h723car.dep  heap_4.crf  heap_4.d  i2c.crf  i2c.d  list.crf  list.d  main.crf  main.d  memorymap.crf  memorymap.d  motor_370.crf  motor_370.d  (+85 more)
h723car +freertos/bsp/: aht20.c  aht20.h  bsp_system.c  bsp_system.h  camera_run.c  camera_run.h  led.c  led.h  motor_370.c  motor_370.h  myspi.c  myspi.h  mytim.c  mytim.h  myusart.c  myusart.h  ov5640.c  ov5640.h  ov5640_cfg.c  ov5640_cfg.h  ov5640_reg.h  ov5640_sccb.c  ov5640_sccb.h  scheduler.c  scheduler.h
spi_udp_uart/: CMakeLists.txt  sdkconfig  sdkconfig.old
spi_udp_uart/main/: CMakeLists.txt  spi_udp_uart.c
